<resources>
    <string name="app_name">Wifi Check</string>
    <string name="title_list">List</string>
    <string name="title_maps">Maps</string>
    <string name="title_settings">Settings</string>
    <string name="title_sort_nearby">Sort nearby</string>
    <string name="title_sort_name">Sort name</string>
    <string name="title_sort_latest">Sort added</string>
    <string name="update">Update</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">List</string>
    <string name="tab_text_2">Maps</string>
    <string name="tab_text_3">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_maps">Map</string>


    <!-- Settings -->

    <string name="notificaiton_or_automated">Notification or changing wifi status automatically:</string>
    <string name="notification_radiobutton">Notification</string>
    <string name="turning_wifi_on_off_radiobutton">Turning wifi on/off</string>
    <string name="both_radiobutton">Both</string>
    <string name="action">Action:</string>
    <string name="entering_wifilocation">Action when entering wifilocation:</string>
    <string name="leaving_wifilocation">Action when leaving wifilocation:</string>
    <string name="notification">Notification:</string>
    <string name="vibrate">Vibrate:</string>
    <string name="sound">Sound:</string>
    <string name="notification_indicator_light">Notification indicator light:</string>
    <string name="title_activity_add">AddActivity</string>


    <!-- Detail -->
    <string name="current_location">Current location</string>
    <string name="name_detail">Name:</string>

    <!--SETTINGS_POPUP -->
    <string name="change_settings">Change Settings</string>
    <string name="hight_accuracy">Change location mode in the setting to \'High accuracy\'</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="not_agree">You did not agree</string>

    <!--SERVICE-->
    <string name="inside_location">You are inside wifilocation:</string>
    <string name="outside_location">You ar outside a wifilocation</string>

    <string name="wifi_checker_checking">Wifi Checker is checking</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <!--ADD-->
    <string name="fill_everything_in">Fill in everything</string>
    <string name="add_marker_error">Add a marker</string>
    <string name="add_name_error">Fill in name</string>
    <string name="add_radius_error">Add a radius</string>

    <!--ADD/UPDATE-->
    <string name="name">Name:</string>
    <string name="radius">Radius:</string>
    <string name="maps">Maps:</string>
</resources>
