<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.wificheck.view.MainActivity">
    <item android:id="@+id/action_nearby"
          android:title="@string/title_sort_nearby"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_name"
          android:title="@string/title_sort_name"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_latest"
          android:title="@string/title_sort_latest"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_search"
            app:showAsAction="always|collapseActionView"
            app:actionViewClass="android.support.v7.widget.SearchView"
            android:title="Search"/>
</menu>
