<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FAFAFA"
        android:orientation="vertical">


    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_block_settings"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/notificaiton_or_automated"
                android:textSize="@dimen/text_title_settings"
                android:textColor="#000000"/>

        <RadioGroup
                android:id="@+id/rg_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_sentence_settings">
            <RadioButton
                    android:id="@+id/rb_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notification_radiobutton"/>
            <RadioButton
                    android:id="@+id/rb_automatic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/turning_wifi_on_off_radiobutton"/>
            <RadioButton
                    android:id="@+id/rb_both"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/both_radiobutton"/>
        </RadioGroup>
    </LinearLayout>

    <View style="@style/Divider"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin_block_settings"
    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action"
                android:textSize="@dimen/text_title_settings"
                android:textColor="#000000"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_sentence_settings"
                android:orientation="horizontal"
        >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entering_wifilocation"
                    android:textColor="#000000"
                    android:layout_weight="2"/>
            <Switch
                    android:id="@+id/s_entering"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_sentence_settings"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/leaving_wifilocation"
                    android:textColor="#000000"
                    android:layout_weight="2"/>
            <Switch
                    android:id="@+id/s_leaving"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"/>
        </LinearLayout>

    </LinearLayout>
    <View style="@style/Divider"/>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin_block_settings"
    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification"
                android:textSize="@dimen/text_title_settings"
                android:textColor="#000000"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_sentence_settings"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="@string/vibrate"
                    android:layout_weight="2"/>
            <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_sentence_settings"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="@string/sound"
                    android:layout_weight="2"/>
            <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_sentence_settings"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="@string/notification_indicator_light"
                    android:layout_weight="2"/>
            <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>