<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.AddActivity">

    <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin_block_settings">

        <TextView
                android:text="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/tv_name"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_sentence_settings"
                android:layout_height="wrap_content" android:id="@+id/et_name"/>
        <TextView
                android:text="@string/radius"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_sentence_settings"
                android:layout_height="wrap_content" android:id="@+id/tv_radius"/>
        <SeekBar
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_sentence_settings"
                android:layout_height="wrap_content" android:id="@+id/sb_radius"/>

        <TextView
                android:text="@string/maps"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_sentence_settings"
                android:layout_height="wrap_content" android:id="@+id/tv_location"/>

        <com.google.android.gms.maps.MapView
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_sentence_settings"
                android:layout_height="wrap_content" android:id="@+id/mv_location"/>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_menu_add"/>

</android.support.design.widget.CoordinatorLayout>